--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
   <div class="wrapper">
   <header class="header">
-      <!--<div class="logo">app.creation</div>-->
-      <!--<div class="logo">app.creation</div>-->
-        <div class="logo"> </div>
+      <div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>      
+        <div class="logo__circle logo__circle_color_blue"></div>      
+        app.creation       
+        </div>
         <div class="title"> </div>
         <nav class="menu">
           <a class="menu__item" href="#">start</a>        
